<resources>
    <string name="app_name">MoviePlanner</string>
    <string name="title_activity_movie_list">MovieList</string>
    <string name="title">Title:</string>
    <string name="start_date">Start Date:</string>
    <string name="default_date">01-01-1990</string>
    <string name="default_time">23:59</string>
    <string name="end_date">End Date:</string>
    <string name="venue">Venue:</string>
    <string name="location">Location:</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>
    <string name="save">Save</string>
    <string name="attendees">Attendees</string>
    <string name="event_detail">Event Detail</string>
    <string name="associated_movie">Associated Movie</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="year">Year:</string>
    <string name="poster">Poster</string>
    <string name="choose_a_new_event">Choose a new event</string>
    <string name="desc">Desc</string>
    <string name="asc">Asc</string>
    <string name="sort">Sort:</string>
    <string name="cal_back"><![CDATA[<]]></string>
    <string name="cal_forward"><![CDATA[>]]></string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="remind_later">Remind Later</string>
    <string name="setting_the_remind_time">Setting the remind time</string>
    <string name="mins">Mins</string>
    <string name="title_activity_maps">Soonest events</string>
    <string name="notification_period">Notification Period:</string>
    <string name="remind_again">Remind Again:</string>
    <string name="notification_threshold">Notification threshold:</string>
</resources>
