<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:columnCount="7"
        android:rowCount="2">

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/sunday"
            android:textSize="10sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/monday"
            android:textSize="10sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textSize="10sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textSize="10sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/thursday"
            android:textSize="10sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/friday"
            android:textSize="10sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/saturday"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite" />


    </GridLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cal_back"
            />
        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cal_forward"
            />

    </LinearLayout>

</LinearLayout>