<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="18dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc"
            />

        <Button
            android:id="@+id/btnDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc" />

    </LinearLayout>


    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ListView>

</LinearLayout>