<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:id="@+id/image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/image"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/image"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/dismiss" />
    <Button
        android:id="@+id/bCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/bRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="20dp"
        android:text="@string/remind_later" />


</RelativeLayout>